UndoManager: fix a crash with mixed user action/not undoable action

Blocking signals should be done carefully, the internal state of the
UndoManager must still be consistent with the text buffer.

So don't block the begin/end-user-action signals.

https://bugzilla.gnome.org/show_bug.cgi?id=741955